@@ -324,27 +324,6 @@ _eina_file_map_close(Eina_File_Map *map)
    free(map);
 }
 
-static unsigned int
-_eina_file_map_key_length(const void *key EINA_UNUSED)
-{
-   return sizeof (unsigned long int) * 2;
-}
-
-static int
-_eina_file_map_key_cmp(const unsigned long int *key1, int key1_length EINA_UNUSED,
-                       const unsigned long int *key2, int key2_length EINA_UNUSED)
-{
-   if (key1[0] - key2[0] == 0) return key1[1] - key2[1];
-   return key1[0] - key2[0];
-}
-
-static int
-_eina_file_map_key_hash(const unsigned long int *key, int key_length EINA_UNUSED)
-{
-   return eina_hash_int64(&key[0], sizeof (unsigned long int))
-     ^ eina_hash_int64(&key[1], sizeof (unsigned long int));
-}
-
 #ifndef MAP_POPULATE
 static unsigned int
 _eina_file_map_populate(char *map, unsigned int size, Eina_Bool hugetlb)
@@ -880,9 +859,9 @@ eina_file_open(const char *path, Eina_Bool shared)
         memset(n, 0, sizeof(Eina_File));
         n->filename = (char*) (n + 1);
         strcpy((char*) n->filename, filename);
-        n->map = eina_hash_new(EINA_KEY_LENGTH(_eina_file_map_key_length),
-                               EINA_KEY_CMP(_eina_file_map_key_cmp),
-                               EINA_KEY_HASH(_eina_file_map_key_hash),
+        n->map = eina_hash_new(EINA_KEY_LENGTH(eina_file_map_key_length),
+                               EINA_KEY_CMP(eina_file_map_key_cmp),
+                               EINA_KEY_HASH(eina_file_map_key_hash),
                                EINA_FREE_CB(_eina_file_map_close),
                                3);
         n->rmap = eina_hash_pointer_new(NULL);
@@ -931,7 +910,9 @@ eina_file_map_all(Eina_File *file, Eina_File_Populate rule)
 
    EINA_SAFETY_ON_NULL_RETURN_VAL(file, NULL);
 
-// bsd people will lack this feature
+   if (file->virtual) return eina_file_virtual_map_all(file);
+
+   // bsd people will lack this feature
 #ifdef MAP_POPULATE
    if (rule == EINA_FILE_POPULATE) flags |= MAP_POPULATE;
 #endif
@@ -983,6 +964,9 @@ eina_file_map_new(Eina_File *file, Eina_File_Populate rule,
 
    if (offset == 0 && length == file->length)
      return eina_file_map_all(file, rule);
+
+   if (file->virtual)
+     return eina_file_virtual_map_new(file, offset, length);
 
    key[0] = offset;
    key[1] = length;
@@ -1048,6 +1032,9 @@ eina_file_map_free(Eina_File *file, void *map)
 {
    EINA_SAFETY_ON_NULL_RETURN(file);
 
+   if (file->virtual)
+     return eina_file_virtual_map_free(file, map);
+
    eina_lock_take(&file->lock);
 
    if (file->global_map == map)
@@ -1104,6 +1091,8 @@ eina_file_map_faulted(Eina_File *file, void *map)
 
    EINA_SAFETY_ON_NULL_RETURN_VAL(file, EINA_FALSE);
 
+   if (file->virtual) return EINA_FALSE;
+
    eina_lock_take(&file->lock);
 
    if (file->global_map == map)
@@ -1126,6 +1115,8 @@ eina_file_xattr_get(Eina_File *file)
 {
    EINA_SAFETY_ON_NULL_RETURN_VAL(file, NULL);
 
+   if (file->virtual) return NULL;
+
    return eina_xattr_fd_ls(file->fd);
 }
 
@@ -1133,6 +1124,8 @@ EAPI Eina_Iterator *
 eina_file_xattr_value_get(Eina_File *file)
 {
    EINA_SAFETY_ON_NULL_RETURN_VAL(file, NULL);
+
+   if (file->virtual) return NULL;
 
    return eina_xattr_value_fd_ls(file->fd);
 }
