@@ -1,3 +1,7 @@
+2013-07-31  Cedric Bail
+
+	* Eina: add eina_file_virtualize() and eina_file_virtual().
+
 2013-07-25  ChunEon Park (Hermet)
 
         * Evas: Skip the map rendering if all points are transparent.
